1. Added tests 2. Removed redundant comments 3. Added checkstyle 4. Added few minor fixes