@@ -1,19 +1,18 @@
 package org.example;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Arrays;
 
 public class Main {
     private static final StringSorter sorter = new StringSorter();
-    private static List<String> unsortedStrings = new ArrayList<>();
+    private static List<String> unsortedStrings;
     private static String exceptionChar;
+    private static List<String> sortedStrings;
 
     public static void main(String[] args) {
-        unsortedStrings = Arrays.asList("apple", "banana", "grape", "avocado", "cherry");
+        unsortedStrings = List.of("apple", "banana", "grape", "avocado", "cherry");
         exceptionChar = "a";
 
-        List<String> sortedStrings = sorter.sortStrings(unsortedStrings, exceptionChar);
+        sortedStrings = sorter.sortStrings(unsortedStrings, exceptionChar);
 
         sortedStrings.forEach(System.out::println);
     }
